src/objects/ActivityTemplate__c.object
<CustomObject>
    <description>CORE - This object is used to define default after sales activities to be created automatically to enhance the customer experience.</description>
    <fields>
        <fullName>Account_Location__c</fullName>
        <description>CORE</description>
        <label>Account Location</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - Checkbox indicating whether activities template will generate activities when criteria is met</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Until_Due__c</fullName>
        <description>CORE - Days from creatiton date auto generated activity is due</description>
        <inlineHelpText>Number of Days from the triggered creation of the event</inlineHelpText>
        <label>Days Until Due</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - Set default owner of created activity</description>
        <inlineHelpText>If left blank this will default to the owner of the associated record.</inlineHelpText>
        <label>Default Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activity_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>CORE - Description of activity</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Rating_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - Feedback required for activity?</description>
        <label>NPS Rating Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>CORE - Type of product activity is related to</description>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials - Software Bundles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <description>CORE</description>
        <label>Related To</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>CORE</description>
        <label>Stage</label>
        <picklist>
            <controllingField>Related_To__c</controllingField>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won (Verbal Agreement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract (If Required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CORE</description>
        <label>Status</label>
        <picklist>
            <controllingField>Related_To__c</controllingField>
            <picklistValues>
                <fullName>On Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>CORE - Subject of activity created</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Activity Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Activity Template No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountLocationRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IsPickVal(Account_Location__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Account_Location__c</errorDisplayField>
        <errorMessage>You must select a country that this rule applies to in order to save this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RelatedToRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IsPickVal(Related_To__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Related_To__c</errorDisplayField>
        <errorMessage>You must define which kind of object this template relates to in order to save this record.</errorMessage>
    </validationRules>
</CustomObject>